--- a/output/index.html
+++ b/output/index.html
@@ -31,6 +31,6 @@
 	<footer>
 	</footer>
 	<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-	<script src="js/index.js"></script>
+	<script src="/js/index.js"></script>
 </body>
 </html>
