--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset='utf-8'>
 	<meta http-equiv="X-UA-Compatible" content="chrome=1">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
-	<title>累土 by JamesAdmin</title>
+	<title>累土 by leituT</title>
 </head>
 <body>
 	<header>
