--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 	<meta charset='utf-8'>
@@ -26,7 +26,7 @@
 		</div>
 	</header>
 	<div class="container">
-		<div class="banner"></div>
+	<div class="banner"></div>
 	</div>
 	<footer>
 	</footer>
